Masters project/otawa/gliss2/irg/parser.output
   0  $accept : %entry% $end

   1  top : specs EOF

   2  LocatedID : ID

   3  specs : MachineSpec
   4        | specs MachineSpec

   5  MachineSpec : LetDef
   6              | TypeSpec
   7              | MemorySpec
   8              | RegisterSpec
   9              | VarSpec
  10              | ModeSpec
  11              | OpSpec
  12              | ResourceSpec
  13              | ExceptionSpec
  14              | ExtendSpec
  15              | CanonSpec

  16  LetDef : LET LocatedID EQ LetExpr
  17         | LET LocatedID COLON Type EQ LetExpr

  18  ResourceSpec : RESOURCE ResourceList

  19  ResourceList : Resource
  20               | ResourceList COMMA Resource

  21  Resource : LocatedID
  22           | LocatedID LBRACK CARD_CONST RBRACK

  23  CanonSpec : CANON STRING_CONST LPAREN CanonParamList RPAREN
  24            | CANON Type STRING_CONST LPAREN CanonParamList RPAREN
  25            | CANON STRING_CONST LPAREN RPAREN
  26            | CANON Type STRING_CONST LPAREN RPAREN
  27            | CANON Type STRING_CONST

  28  CanonParamList : CanonParam
  29                 | CanonParamList COMMA CanonParam

  30  CanonParam : Type
  31             | LocatedID COLON Type

  32  ExceptionSpec : EXCEPTION IdentifierList

  33  IdentifierList : LocatedID
  34                 | IdentifierList COMMA LocatedID

  35  TypeSpec : TYPE LocatedID EQ TypeExpr

  36  TypeExpr : BOOL
  37           | INT LPAREN LetExpr RPAREN
  38           | CARD LPAREN LetExpr RPAREN
  39           | FIX LPAREN LetExpr COMMA LetExpr RPAREN
  40           | FLOAT LPAREN LetExpr COMMA LetExpr RPAREN
  41           | LBRACK LetExpr DOUBLE_DOT LetExpr RBRACK
  42           | ENUM LPAREN ValueList RPAREN

  43  ValueList : Value
  44            | ValueList COMMA Value

  45  Value : LetExpr
  46        | LetExpr DOUBLE_DOT LetExpr

  47  LetExpr : Expr

  48  MemorySpec : MEM LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList

  49  RegisterSpecHeader : REG LocatedID LBRACK RegPart RBRACK

  50  RegisterSpec : RegisterSpecHeader OptionalMemAttrDefList

  51  VarSpec : VAR LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  52  MemPart : LetExpr COMMA Type
  53          | LetExpr

  54  RegPart : LetExpr COMMA Type
  55          | Type

  56  Type : TypeExpr
  57       | ID

  58  OptionalMemAttrDefList :
  59                         | MemAttrDefList

  60  MemAttrDefList : MemAttrDef
  61                 | MemAttrDefList MemAttrDef

  62  MemAttrDef : VOLATILE EQ LetExpr
  63             | INITIALA EQ LetExpr
  64             | PORTS EQ CARD_CONST COMMA CARD_CONST
  65             | USES EQ UsesDef
  66             | ALIAS EQ MemLocation
  67             | ID EQ Expr
  68             | ID EQ LBRACE Sequence RBRACE

  69  MemLocation : MemLocBase
  70              | MemLocBase BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

  71  MemLocBase : ID
  72             | ID LBRACK Expr RBRACK

  73  ModeSpec : MODE LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList
  74           | MODE LocatedID EQ Identifier_Or_List

  75  OptionalModeExpr :
  76                   | EQ Expr

  77  OpSpec : OP LocatedID LPAREN ParamList RPAREN AttrDefList
  78         | OP LocatedID EQ Identifier_Or_List
  79         | OP LocatedID error

  80  ExtendSpec : ExtendHeader AttrDefList

  81  ExtendHeader : EXTEND ExtendIDList

  82  ExtendIDList : ID
  83               | ExtendIDList COMMA ID

  84  Identifier_Or_List : ID
  85                     | Identifier_Or_List PIPE ID

  86  ParamList :
  87            | ParamListPart
  88            | ParamList COMMA ParamListPart

  89  ParamListPart : ID COLON ParaType

  90  ParaType : TypeExpr
  91           | ID

  92  AttrDefList :
  93              | NOAttrDefList

  94  NOAttrDefList : AttrDef
  95                | NOAttrDefList AttrDef

  96  AttrDef : ID EQ Expr
  97          | ID EQ LBRACE Sequence RBRACE
  98          | SYNTAX EQ AttrExpr
  99          | IMAGE EQ AttrExpr
 100          | ACTION EQ LBRACE Sequence RBRACE
 101          | USES EQ UsesDef
 102          | ID EQ error
 103          | ID error

 104  AttrExpr : Expr

 105  Sequence :
 106           | StatementList SEMI

 107  StatementList : Statement
 108                | StatementList SEMI Statement

 109  Statement :
 110            | ACTION
 111            | ID
 112            | ID LPAREN
 113            | ID DOT ACTION
 114            | ID DOT ID
 115            | Location EQ Expr
 116            | ConditionalStatement
 117            | STRING_CONST LPAREN ArgList RPAREN
 118            | ERROR LPAREN STRING_CONST RPAREN
 119            | LET ID EQ Expr
 120            | LET ID COLON Type EQ Expr
 121            | ForHeader DO Sequence ENDDO

 122  ForHeader : FOR ID IN Expr DOUBLE_DOT Expr
 123            | FOR ID COLON Type IN Expr DOUBLE_DOT Expr

 124  ArgList :
 125          | Expr
 126          | ArgList COMMA Expr

 127  Opt_Bit_Optr :
 128               | BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

 129  Location : ID
 130           | ID BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 131           | ID LBRACK Expr RBRACK
 132           | ID LBRACK Expr RBRACK BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 133           | Location DOUBLE_COLON Location
 134           | LPAREN Location RPAREN

 135  ConditionalStatement : IF Expr THEN Sequence OptionalElse ENDIF
 136                       | IF Expr THEN Sequence OptionalElse RBRACE
 137                       | SWITCH LPAREN Expr RPAREN LBRACE CaseBody RBRACE

 138  OptionalElse :
 139               | ELSE Sequence

 140  CaseBody : CaseList
 141           | OptCaseList Default OptCaseList

 142  OptCaseList :
 143              | CaseList

 144  CaseList : CaseStat
 145           | CaseList CaseStat

 146  CaseStat : CASE Expr COLON Sequence

 147  Default : DEFAULT COLON Sequence

 148  Expr : COERCE LPAREN Type COMMA Expr RPAREN
 149       | COERCE error
 150       | FORMAT LPAREN STRING_CONST COMMA ArgList RPAREN
 151       | FORMAT error
 152       | STRING_CONST LPAREN ArgList RPAREN
 153       | ID DOT SYNTAX
 154       | ID DOT IMAGE
 155       | ID DOT ID
 156       | Expr DOUBLE_COLON Expr
 157       | ID
 158       | ID LPAREN
 159       | ID LBRACK Expr RBRACK
 160       | ID LBRACK error
 161       | Expr BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 162       | Expr PLUS Expr
 163       | Expr MINUS Expr
 164       | Expr STAR Expr
 165       | Expr SLASH Expr
 166       | Expr PERCENT Expr
 167       | Expr DOUBLE_STAR Expr
 168       | Expr LEFT_SHIFT Expr
 169       | Expr RIGHT_SHIFT Expr
 170       | Expr ROTATE_LEFT Expr
 171       | Expr ROTATE_RIGHT Expr
 172       | Expr LT Expr
 173       | Expr GT Expr
 174       | Expr LEQ Expr
 175       | Expr GEQ Expr
 176       | Expr EQU Expr
 177       | Expr NEQ Expr
 178       | Expr AMPERS Expr
 179       | Expr CIRC Expr
 180       | Expr PIPE Expr
 181       | EXCLAM Expr
 182       | TILD Expr
 183       | PLUS Expr
 184       | MINUS Expr
 185       | Expr AND Expr
 186       | Expr OR Expr
 187       | LPAREN Expr RPAREN
 188       | LPAREN error
 189       | LPAREN Expr error
 190       | IF Expr THEN Expr ELSE Expr ENDIF
 191       | IF error
 192       | SWITCH LPAREN Expr RPAREN LBRACE CaseExprBody RBRACE
 193       | SWITCH error
 194       | Constant

 195  Constant : FIXED_CONST
 196           | CARD_CONST
 197           | CARD_CONST_64
 198           | BIN_CONST
 199           | BIN_CONST_64
 200           | STRING_CONST

 201  Bit_Expr : ID
 202           | MINUS Bit_Expr
 203           | PLUS Bit_Expr
 204           | TILD Bit_Expr
 205           | Bit_Expr PLUS Bit_Expr
 206           | Bit_Expr MINUS Bit_Expr
 207           | Bit_Expr STAR Bit_Expr
 208           | Bit_Expr SLASH Bit_Expr
 209           | Bit_Expr PERCENT Bit_Expr
 210           | Bit_Expr DOUBLE_STAR Bit_Expr
 211           | Bit_Expr AMPERS Bit_Expr
 212           | Bit_Expr PIPE Bit_Expr
 213           | Bit_Expr CIRC Bit_Expr
 214           | LPAREN Bit_Expr RPAREN
 215           | FIXED_CONST
 216           | CARD_CONST
 217           | STRING_CONST

 218  CaseExprBody : CaseExprList
 219               | OptCaseExprList ExprDefault OptCaseExprList

 220  OptCaseExprList :
 221                  | CaseExprList

 222  CaseExprList : CaseExprStat
 223               | CaseExprList CaseExprStat

 224  CaseExprStat : CASE Expr COLON Expr

 225  ExprDefault : DEFAULT COLON Expr

 226  UsesDef : UsesOrSequence
 227          | UsesDef COMMA UsesOrSequence

 228  UsesOrSequence : UsesIfAtom
 229                 | UsesOrSequence PIPE UsesIfAtom

 230  UsesIfAtom : UsesIndirectAtom
 231             | IF Expr THEN UsesIfAtom OptionalElseAtom ENDIF

 232  OptionalElseAtom :
 233                   | ELSE UsesIfAtom

 234  UsesIndirectAtom : UsesCondAtom
 235                   | ID DOT USES
 236                   | LPAREN UsesDef RPAREN
 237                   | UsesLocationList AND ID DOT USES
 238                   | UsesLocationList AND LPAREN UsesDef RPAREN

 239  UsesCondAtom : UsesAndAtom
 240               | LBRACE Expr RBRACE UsesAndAtom

 241  UsesAndAtom : UsesLocationList UsesActionList

 242  UsesActionList :
 243                 | ActionTimeList OptionalAction
 244                 | TimeActionList OptionalTime

 245  ActionTimeList : SHARP LBRACE Expr RBRACE
 246                 | ActionTimeList COLON UsesActionAttr SHARP LBRACE Expr RBRACE

 247  TimeActionList : COLON UsesActionAttr
 248                 | TimeActionList SHARP LBRACE Expr RBRACE COLON UsesActionAttr

 249  OptionalAction :
 250                 | COLON UsesActionAttr

 251  OptionalTime :
 252               | SHARP LBRACE Expr RBRACE

 253  UsesActionAttr : ID
 254                 | ACTION

 255  UsesLocationList : UsesLocation
 256                   | UsesLocationList AMPERS UsesLocation

 257  UsesLocation : ID Opt_Bit_Optr
 258               | ID LBRACK Expr RBRACK Opt_SecDim Opt_Bit_Optr

 259  Opt_SecDim :
 260             | LBRACK RBRACK

 261  %entry% : '\001' top

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . top  (261)

	CANON  shift 3
	EXTEND  shift 4
	LET  shift 5
	MEM  shift 6
	MODE  shift 7
	OP  shift 8
	REG  shift 9
	TYPE  shift 10
	VAR  shift 11
	RESOURCE  shift 12
	EXCEPTION  shift 13
	.  error

	top  goto 14
	specs  goto 15
	MachineSpec  goto 16
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	RegisterSpecHeader  goto 28
	ExtendHeader  goto 29


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	CanonSpec : CANON . STRING_CONST LPAREN CanonParamList RPAREN  (23)
	CanonSpec : CANON . Type STRING_CONST LPAREN CanonParamList RPAREN  (24)
	CanonSpec : CANON . STRING_CONST LPAREN RPAREN  (25)
	CanonSpec : CANON . Type STRING_CONST LPAREN RPAREN  (26)
	CanonSpec : CANON . Type STRING_CONST  (27)

	ID  shift 30
	STRING_CONST  shift 31
	BOOL  shift 32
	CARD  shift 33
	ENUM  shift 34
	FIX  shift 35
	FLOAT  shift 36
	INT  shift 37
	LBRACK  shift 38
	.  error

	Type  goto 39
	TypeExpr  goto 40


state 4
	ExtendHeader : EXTEND . ExtendIDList  (81)

	ID  shift 41
	.  error

	ExtendIDList  goto 42


state 5
	LetDef : LET . LocatedID EQ LetExpr  (16)
	LetDef : LET . LocatedID COLON Type EQ LetExpr  (17)

	ID  shift 43
	.  error

	LocatedID  goto 44


state 6
	MemorySpec : MEM . LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList  (48)

	ID  shift 43
	.  error

	LocatedID  goto 45


state 7
	ModeSpec : MODE . LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (73)
	ModeSpec : MODE . LocatedID EQ Identifier_Or_List  (74)

	ID  shift 43
	.  error

	LocatedID  goto 46


state 8
	OpSpec : OP . LocatedID LPAREN ParamList RPAREN AttrDefList  (77)
	OpSpec : OP . LocatedID EQ Identifier_Or_List  (78)
	OpSpec : OP . LocatedID error  (79)

	ID  shift 43
	.  error

	LocatedID  goto 47


state 9
	RegisterSpecHeader : REG . LocatedID LBRACK RegPart RBRACK  (49)

	ID  shift 43
	.  error

	LocatedID  goto 48


state 10
	TypeSpec : TYPE . LocatedID EQ TypeExpr  (35)

	ID  shift 43
	.  error

	LocatedID  goto 49


state 11
	VarSpec : VAR . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (51)

	ID  shift 43
	.  error

	LocatedID  goto 50


state 12
	ResourceSpec : RESOURCE . ResourceList  (18)

	ID  shift 43
	.  error

	LocatedID  goto 51
	ResourceList  goto 52
	Resource  goto 53


state 13
	ExceptionSpec : EXCEPTION . IdentifierList  (32)

	ID  shift 43
	.  error

	LocatedID  goto 54
	IdentifierList  goto 55


state 14
	%entry% : '\001' top .  (261)

	.  reduce 261


state 15
	top : specs . EOF  (1)
	specs : specs . MachineSpec  (4)

	CANON  shift 3
	EXTEND  shift 4
	LET  shift 5
	MEM  shift 6
	MODE  shift 7
	OP  shift 8
	REG  shift 9
	TYPE  shift 10
	VAR  shift 11
	RESOURCE  shift 12
	EXCEPTION  shift 13
	EOF  shift 56
	.  error

	MachineSpec  goto 57
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	RegisterSpecHeader  goto 28
	ExtendHeader  goto 29


state 16
	specs : MachineSpec .  (3)

	.  reduce 3


state 17
	MachineSpec : LetDef .  (5)

	.  reduce 5


state 18
	MachineSpec : TypeSpec .  (6)

	.  reduce 6


state 19
	MachineSpec : MemorySpec .  (7)

	.  reduce 7


state 20
	MachineSpec : RegisterSpec .  (8)

	.  reduce 8


state 21
	MachineSpec : VarSpec .  (9)

	.  reduce 9


state 22
	MachineSpec : ModeSpec .  (10)

	.  reduce 10


state 23
	MachineSpec : OpSpec .  (11)

	.  reduce 11


state 24
	MachineSpec : ResourceSpec .  (12)

	.  reduce 12


state 25
	MachineSpec : ExceptionSpec .  (13)

	.  reduce 13


state 26
	MachineSpec : ExtendSpec .  (14)

	.  reduce 14


state 27
	MachineSpec : CanonSpec .  (15)

	.  reduce 15


state 28
	RegisterSpec : RegisterSpecHeader . OptionalMemAttrDefList  (50)
	OptionalMemAttrDefList : .  (58)

	ID  shift 58
	ALIAS  shift 59
	INITIALA  shift 60
	VOLATILE  shift 61
	PORTS  shift 62
	USES  shift 63
	CANON  reduce 58
	EXTEND  reduce 58
	LET  reduce 58
	MEM  reduce 58
	MODE  reduce 58
	OP  reduce 58
	REG  reduce 58
	TYPE  reduce 58
	VAR  reduce 58
	RESOURCE  reduce 58
	EXCEPTION  reduce 58
	EOF  reduce 58

	OptionalMemAttrDefList  goto 64
	MemAttrDefList  goto 65
	MemAttrDef  goto 66


state 29
	ExtendSpec : ExtendHeader . AttrDefList  (80)
	AttrDefList : .  (92)

	ID  shift 67
	ACTION  shift 68
	IMAGE  shift 69
	SYNTAX  shift 70
	USES  shift 71
	CANON  reduce 92
	EXTEND  reduce 92
	LET  reduce 92
	MEM  reduce 92
	MODE  reduce 92
	OP  reduce 92
	REG  reduce 92
	TYPE  reduce 92
	VAR  reduce 92
	RESOURCE  reduce 92
	EXCEPTION  reduce 92
	EOF  reduce 92

	AttrDefList  goto 72
	NOAttrDefList  goto 73
	AttrDef  goto 74


state 30
	Type : ID .  (57)

	.  reduce 57


state 31
	CanonSpec : CANON STRING_CONST . LPAREN CanonParamList RPAREN  (23)
	CanonSpec : CANON STRING_CONST . LPAREN RPAREN  (25)

	LPAREN  shift 75
	.  error


state 32
	TypeExpr : BOOL .  (36)

	.  reduce 36


state 33
	TypeExpr : CARD . LPAREN LetExpr RPAREN  (38)

	LPAREN  shift 76
	.  error


state 34
	TypeExpr : ENUM . LPAREN ValueList RPAREN  (42)

	LPAREN  shift 77
	.  error


state 35
	TypeExpr : FIX . LPAREN LetExpr COMMA LetExpr RPAREN  (39)

	LPAREN  shift 78
	.  error


state 36
	TypeExpr : FLOAT . LPAREN LetExpr COMMA LetExpr RPAREN  (40)

	LPAREN  shift 79
	.  error


state 37
	TypeExpr : INT . LPAREN LetExpr RPAREN  (37)

	LPAREN  shift 80
	.  error


state 38
	TypeExpr : LBRACK . LetExpr DOUBLE_DOT LetExpr RBRACK  (41)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 97
	Expr  goto 98
	Constant  goto 99


state 39
	CanonSpec : CANON Type . STRING_CONST LPAREN CanonParamList RPAREN  (24)
	CanonSpec : CANON Type . STRING_CONST LPAREN RPAREN  (26)
	CanonSpec : CANON Type . STRING_CONST  (27)

	STRING_CONST  shift 100
	.  error


state 40
	Type : TypeExpr .  (56)

	.  reduce 56


state 41
	ExtendIDList : ID .  (82)

	.  reduce 82


state 42
	ExtendHeader : EXTEND ExtendIDList .  (81)
	ExtendIDList : ExtendIDList . COMMA ID  (83)

	COMMA  shift 101
	ID  reduce 81
	ACTION  reduce 81
	CANON  reduce 81
	EXTEND  reduce 81
	IMAGE  reduce 81
	LET  reduce 81
	MEM  reduce 81
	MODE  reduce 81
	OP  reduce 81
	REG  reduce 81
	SYNTAX  reduce 81
	TYPE  reduce 81
	VAR  reduce 81
	RESOURCE  reduce 81
	USES  reduce 81
	EXCEPTION  reduce 81
	EOF  reduce 81


state 43
	LocatedID : ID .  (2)

	.  reduce 2


state 44
	LetDef : LET LocatedID . EQ LetExpr  (16)
	LetDef : LET LocatedID . COLON Type EQ LetExpr  (17)

	EQ  shift 102
	COLON  shift 103
	.  error


state 45
	MemorySpec : MEM LocatedID . LBRACK MemPart RBRACK OptionalMemAttrDefList  (48)

	LBRACK  shift 104
	.  error


state 46
	ModeSpec : MODE LocatedID . LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (73)
	ModeSpec : MODE LocatedID . EQ Identifier_Or_List  (74)

	EQ  shift 105
	LPAREN  shift 106
	.  error


state 47
	OpSpec : OP LocatedID . LPAREN ParamList RPAREN AttrDefList  (77)
	OpSpec : OP LocatedID . EQ Identifier_Or_List  (78)
	OpSpec : OP LocatedID . error  (79)

	error  shift 107
	EQ  shift 108
	LPAREN  shift 109
	.  error


state 48
	RegisterSpecHeader : REG LocatedID . LBRACK RegPart RBRACK  (49)

	LBRACK  shift 110
	.  error


state 49
	TypeSpec : TYPE LocatedID . EQ TypeExpr  (35)

	EQ  shift 111
	.  error


state 50
	VarSpec : VAR LocatedID . LBRACK RegPart RBRACK OptionalMemAttrDefList  (51)

	LBRACK  shift 112
	.  error


state 51
	Resource : LocatedID .  (21)
	Resource : LocatedID . LBRACK CARD_CONST RBRACK  (22)

	LBRACK  shift 113
	CANON  reduce 21
	EXTEND  reduce 21
	LET  reduce 21
	MEM  reduce 21
	MODE  reduce 21
	OP  reduce 21
	REG  reduce 21
	TYPE  reduce 21
	VAR  reduce 21
	RESOURCE  reduce 21
	EXCEPTION  reduce 21
	EOF  reduce 21
	COMMA  reduce 21


state 52
	ResourceSpec : RESOURCE ResourceList .  (18)
	ResourceList : ResourceList . COMMA Resource  (20)

	COMMA  shift 114
	CANON  reduce 18
	EXTEND  reduce 18
	LET  reduce 18
	MEM  reduce 18
	MODE  reduce 18
	OP  reduce 18
	REG  reduce 18
	TYPE  reduce 18
	VAR  reduce 18
	RESOURCE  reduce 18
	EXCEPTION  reduce 18
	EOF  reduce 18


state 53
	ResourceList : Resource .  (19)

	.  reduce 19


state 54
	IdentifierList : LocatedID .  (33)

	.  reduce 33


state 55
	ExceptionSpec : EXCEPTION IdentifierList .  (32)
	IdentifierList : IdentifierList . COMMA LocatedID  (34)

	COMMA  shift 115
	CANON  reduce 32
	EXTEND  reduce 32
	LET  reduce 32
	MEM  reduce 32
	MODE  reduce 32
	OP  reduce 32
	REG  reduce 32
	TYPE  reduce 32
	VAR  reduce 32
	RESOURCE  reduce 32
	EXCEPTION  reduce 32
	EOF  reduce 32


state 56
	top : specs EOF .  (1)

	.  reduce 1


state 57
	specs : specs MachineSpec .  (4)

	.  reduce 4


state 58
	MemAttrDef : ID . EQ Expr  (67)
	MemAttrDef : ID . EQ LBRACE Sequence RBRACE  (68)

	EQ  shift 116
	.  error


state 59
	MemAttrDef : ALIAS . EQ MemLocation  (66)

	EQ  shift 117
	.  error


state 60
	MemAttrDef : INITIALA . EQ LetExpr  (63)

	EQ  shift 118
	.  error


state 61
	MemAttrDef : VOLATILE . EQ LetExpr  (62)

	EQ  shift 119
	.  error


state 62
	MemAttrDef : PORTS . EQ CARD_CONST COMMA CARD_CONST  (64)

	EQ  shift 120
	.  error


state 63
	MemAttrDef : USES . EQ UsesDef  (65)

	EQ  shift 121
	.  error


state 64
	RegisterSpec : RegisterSpecHeader OptionalMemAttrDefList .  (50)

	.  reduce 50


state 65
	OptionalMemAttrDefList : MemAttrDefList .  (59)
	MemAttrDefList : MemAttrDefList . MemAttrDef  (61)

	ID  shift 58
	ALIAS  shift 59
	INITIALA  shift 60
	VOLATILE  shift 61
	PORTS  shift 62
	USES  shift 63
	CANON  reduce 59
	EXTEND  reduce 59
	LET  reduce 59
	MEM  reduce 59
	MODE  reduce 59
	OP  reduce 59
	REG  reduce 59
	TYPE  reduce 59
	VAR  reduce 59
	RESOURCE  reduce 59
	EXCEPTION  reduce 59
	EOF  reduce 59

	MemAttrDef  goto 122


state 66
	MemAttrDefList : MemAttrDef .  (60)

	.  reduce 60


state 67
	AttrDef : ID . EQ Expr  (96)
	AttrDef : ID . EQ LBRACE Sequence RBRACE  (97)
	AttrDef : ID . EQ error  (102)
	AttrDef : ID . error  (103)

	error  shift 123
	EQ  shift 124
	.  error


state 68
	AttrDef : ACTION . EQ LBRACE Sequence RBRACE  (100)

	EQ  shift 125
	.  error


state 69
	AttrDef : IMAGE . EQ AttrExpr  (99)

	EQ  shift 126
	.  error


state 70
	AttrDef : SYNTAX . EQ AttrExpr  (98)

	EQ  shift 127
	.  error


state 71
	AttrDef : USES . EQ UsesDef  (101)

	EQ  shift 128
	.  error


state 72
	ExtendSpec : ExtendHeader AttrDefList .  (80)

	.  reduce 80


state 73
	AttrDefList : NOAttrDefList .  (93)
	NOAttrDefList : NOAttrDefList . AttrDef  (95)

	ID  shift 67
	ACTION  shift 68
	IMAGE  shift 69
	SYNTAX  shift 70
	USES  shift 71
	CANON  reduce 93
	EXTEND  reduce 93
	LET  reduce 93
	MEM  reduce 93
	MODE  reduce 93
	OP  reduce 93
	REG  reduce 93
	TYPE  reduce 93
	VAR  reduce 93
	RESOURCE  reduce 93
	EXCEPTION  reduce 93
	EOF  reduce 93

	AttrDef  goto 129


state 74
	NOAttrDefList : AttrDef .  (94)

	.  reduce 94


state 75
	CanonSpec : CANON STRING_CONST LPAREN . CanonParamList RPAREN  (23)
	CanonSpec : CANON STRING_CONST LPAREN . RPAREN  (25)

	ID  shift 130
	BOOL  shift 32
	CARD  shift 33
	ENUM  shift 34
	FIX  shift 35
	FLOAT  shift 36
	INT  shift 37
	LBRACK  shift 38
	RPAREN  shift 131
	.  error

	LocatedID  goto 132
	Type  goto 133
	CanonParamList  goto 134
	CanonParam  goto 135
	TypeExpr  goto 40


state 76
	TypeExpr : CARD LPAREN . LetExpr RPAREN  (38)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 136
	Expr  goto 98
	Constant  goto 99


state 77
	TypeExpr : ENUM LPAREN . ValueList RPAREN  (42)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 137
	ValueList  goto 138
	Value  goto 139
	Expr  goto 98
	Constant  goto 99


state 78
	TypeExpr : FIX LPAREN . LetExpr COMMA LetExpr RPAREN  (39)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 140
	Expr  goto 98
	Constant  goto 99


state 79
	TypeExpr : FLOAT LPAREN . LetExpr COMMA LetExpr RPAREN  (40)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 141
	Expr  goto 98
	Constant  goto 99


state 80
	TypeExpr : INT LPAREN . LetExpr RPAREN  (37)

	ID  shift 81
	BIN_CONST  shift 82
	BIN_CONST_64  shift 83
	CARD_CONST  shift 84
	CARD_CONST_64  shift 85
	FIXED_CONST  shift 86
	STRING_CONST  shift 87
	COERCE  shift 88
	FORMAT  shift 89
	IF  shift 90
	SWITCH  shift 91
	EXCLAM  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TILD  shift 95
	LPAREN  shift 96
	.  error

	LetExpr  goto 142
	Expr  goto 98
	Constant  goto 99


state 81
	Expr : ID . DOT SYNTAX  (153)
	Expr : ID . DOT IMAGE  (154)
	Expr : ID . DOT ID  (155)
	Expr : ID .  (157)
	Expr : ID . LPAREN  (158)
	Expr : ID . LBRACK Expr RBRACK  (159)
	Expr : ID . LBRACK error  (160)
